--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "cross-env DEBUG=notes:* node ./app.mjs"
+    "start": "cross-env DEBUG=notes:* nodemon ./app.mjs"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -14,5 +14,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  }
 }
